bk_ida/gccida/g3/set_block_origin_self
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3332:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3336:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3340:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3344:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3351:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3358:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3365:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3369:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3373:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v46; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3374:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i13; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3375:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i10; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3379:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3380:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i7; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3384:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v57; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3388:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v61; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3389:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i2; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3425:21: error: expected expression
v5 = *( tree_node **)( low + 104); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3425:9: error: use of undeclared identifier 'tree_node'
v5 = *( tree_node **)( low + 104); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/integrate.c:3426:31: error: expected expression
if ( v5 && v5 != ( tree_node *)global_trees ) 
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/set_block_origin_self/src/obj/integrate.o] Error 1
